# go-rust-channel-benchmark

./: README.md
go/: main.go  main_test.go
rust/: Cargo.toml
rust/benches/: bench.rs
rust/src/: main.rs
