[package]
name = "rust-channels-bench"
version = "0.1.0"
authors = ["Alexander K. <cojuer@gmail.com>"]
edition = "2018"

[dependencies]
async-std = "*"
tokio = { version = "1.5.0", features = ["full"] }
criterion = { version = "0.3.4", features = ["async_tokio", "async_std"] }

[[bench]]
name = "bench"
harness = false
